add list, filters, sort, paginations and metadata for list movies
