# cmd/api/dist/swagger.yaml
@@ -1,56 +1,50 @@
-components:
-  schemas:
-    data.Movie:
-      properties:
-        genres:
-          items:
-            type: string
-          type: array
-          uniqueItems: false
-        id:
-          type: integer
-        runtime:
-          example: "0"
+definitions:
+  data.Movie:
+    properties:
+      genres:
+        items:
           type: string
-        title:
-          type: string
-        version:
-          type: integer
-        year:
-          type: integer
-      type: object
-    data.MovieList:
-      properties:
-        movies:
-          items:
-            $ref: '#/components/schemas/data.Movie'
-          type: array
-          uniqueItems: false
-      type: object
-    main.envStruct:
-      properties:
-        built_sha:
-          type: string
-        status:
-          type: string
-        system_info:
-          $ref: '#/components/schemas/main.systemInfo'
-      type: object
-    main.envWithEnvelop:
-      properties:
-        env:
-          $ref: '#/components/schemas/main.envStruct'
-      type: object
-    main.systemInfo:
-      properties:
-        env:
-          type: string
-        version:
-          type: string
-      type: object
-externalDocs:
-  description: ""
-  url: ""
+        type: array
+      id:
+        type: integer
+      runtime:
+        example: "0"
+        type: string
+      title:
+        type: string
+      version:
+        type: integer
+      year:
+        type: integer
+    type: object
+  data.MovieList:
+    properties:
+      movies:
+        items:
+          $ref: '#/definitions/data.Movie'
+        type: array
+    type: object
+  main.envStruct:
+    properties:
+      built_sha:
+        type: string
+      status:
+        type: string
+      system_info:
+        $ref: '#/definitions/main.systemInfo'
+    type: object
+  main.envWithEnvelop:
+    properties:
+      env:
+        $ref: '#/definitions/main.envStruct'
+    type: object
+  main.systemInfo:
+    properties:
+      env:
+        type: string
+      version:
+        type: string
+    type: object
 info:
   contact:
     email: yang.lyu@hotmail.com
@@ -60,7 +54,6 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Movies Web API
   version: "1.0"
-openapi: 3.1.0
 paths:
   /v1/healthcheck:
     get:
@@ -68,78 +61,61 @@ paths:
         Returns a healthcheck response including the Git SHA that was
         used to build the current binary. This does not use the HASH env
         variable but rather the binary debug symbols.
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/main.envWithEnvelop'
           description: OK
+          schema:
+            $ref: '#/definitions/main.envWithEnvelop'
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Healthcheck
       tags:
       - healthcheck
   /v1/movies:
     get:
       description: Get a list of movies
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/data.MovieList'
           description: OK
+          schema:
+            $ref: '#/definitions/data.MovieList'
         "400":
-          content:
-            application/json:
-              schema: {}
           description: Bad Request
+          schema: {}
         "404":
-          content:
-            application/json:
-              schema: {}
           description: Not Found
+          schema: {}
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Get a list of movies
       tags:
       - movies
     post:
+      consumes:
+      - application/json
       description: Create a new movie
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/data.Movie'
           description: OK
+          schema:
+            $ref: '#/definitions/data.Movie'
         "400":
-          content:
-            application/json:
-              schema: {}
           description: Bad Request
+          schema: {}
         "404":
-          content:
-            application/json:
-              schema: {}
           description: Not Found
+          schema: {}
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Create a new movie
       tags:
       - movies
@@ -150,31 +126,23 @@ paths:
       - description: movie ID
         in: path
         name: id
-        required: true
-        schema:
-          type: string
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/data.Movie'
           description: OK
+          schema:
+            $ref: '#/definitions/data.Movie'
         "400":
-          content:
-            application/json:
-              schema: {}
           description: Bad Request
+          schema: {}
         "404":
-          content:
-            application/json:
-              schema: {}
           description: Not Found
+          schema: {}
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Delete a specific movie
       tags:
       - movies
@@ -184,31 +152,23 @@ paths:
       - description: movie ID
         in: path
         name: id
-        required: true
-        schema:
-          type: string
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/data.Movie'
           description: OK
+          schema:
+            $ref: '#/definitions/data.Movie'
         "400":
-          content:
-            application/json:
-              schema: {}
           description: Bad Request
+          schema: {}
         "404":
-          content:
-            application/json:
-              schema: {}
           description: Not Found
+          schema: {}
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Get a specific movie
       tags:
       - movies
@@ -218,34 +178,24 @@ paths:
       - description: movie ID
         in: path
         name: id
-        required: true
-        schema:
-          type: string
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/data.Movie'
           description: OK
+          schema:
+            $ref: '#/definitions/data.Movie'
         "400":
-          content:
-            application/json:
-              schema: {}
           description: Bad Request
+          schema: {}
         "404":
-          content:
-            application/json:
-              schema: {}
           description: Not Found
+          schema: {}
         "500":
-          content:
-            application/json:
-              schema: {}
           description: Internal Server Error
+          schema: {}
       summary: Update a specific movie
       tags:
       - movies
-servers:
-- description: API server behind the api docs
-  url: /
+swagger: "2.0"
